# LLMcourse

./: Q&A_literature.ipynb  README.md  agent.py  eegreviewagent.py  parser.py  pubmed.py  pyproject.toml  requirements.txt  streamlitapp.py
utils/: llm.py  prompts.py
